Anonymous | Login | 2021-01-26 05:10 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0030926 | Open CASCADE | [OCCT] OCCT:Data Exchange | public | 2019-08-29 11:35 | 2019-09-02 18:01 | ||||
Reporter | vro | ||||||||
Assigned To | apn | ||||||||
Priority | normal | Severity | minor | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | Windows | OS | VC++ 2012 | OS Version | 64 bit | ||||
Product Version | [OCCT] 7.3.0 | ||||||||
Target Version | [OCCT] 7.4.0 | Fixed in Version | [OCCT] 7.4.0 | ||||||
Summary | 0030926: Data Exchange - Change of the number of GDT points of a View may lead to a crash | ||||||||
Description | If the number of GDT points of a view is decreased, a request on the points leads sometimes to crash. | ||||||||
Steps To Reproduce | It seems difficult to reproduce the bug outside the specific application. But the functionality is well covered for non-regression tests by these commands: OCC28389, OCC28044. | ||||||||
Tags | No tags attached. | ||||||||
Test case number | Not needed | ||||||||
Attached Files | |||||||||
![]() |
|
(0086525) vro (developer) 2019-08-29 15:43 |
Fixed, please review: CR30929: http://vm-jenkins-test-12/view/CR30929-master-vro/view/COMPARE/. [^] |
(0086528) mpv (developer) 2019-08-29 16:02 |
Please use OCCT coding rules for new integrations: https://dev.opencascade.org/doc/overview/html/occt_dev_guides__coding_rules.html [^] Names of local variables The name of a local variable should be distinguishable from the name of a function parameter, a class member variable and a global variable. It is preferred to prefix local variable names with a and an (or is, to and has for Boolean variables). Separating spaces For better readability it is also recommended to surround conventional operators by a space character. Examples: while (true) // NOT: while( true ) ... { DoSomething (theA, theB, theC, theD); // NOT: DoSomething(theA,theB,theC,theD); } |
(0086532) git (administrator) 2019-08-29 16:23 |
Branch CR30926 has been created by vro. SHA-1: 53b8b79c56bfc7b6e57ffcbb891812b5b2d02841 Detailed log of new commits: Author: vro Date: Thu Aug 29 16:20:50 2019 +0300 0030926: Data Exchange - Change of the number of GDT points of a View may lead to a crash |
(0086534) vro (developer) 2019-08-29 16:30 |
Attempt N2: CR30926. Does it look better? |
(0086538) apn (administrator) 2019-08-29 18:48 |
Combination - OCCT branch : CR30926 master SHA - 53b8b79c56bfc7b6e57ffcbb891812b5b2d02841 5f5b1aed1c6e139bbd34314eca77ae7abcd8895c Products branch : master SHA - 32e882a7b3145a66baa739f965d275c822c0bd8a was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16091.479999999929 / 16107.320000000014 [-0.10%] Products Total CPU difference: 10511.330000000058 / 10489.71000000005 [+0.21%] Windows-64-VC14: OCCT Total CPU difference: 18156.1875 / 18158.171875 [-0.01%] Products Total CPU difference: 12079.453125 / 12068.71875 [+0.09%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
(0086545) vro (developer) 2019-08-30 07:56 |
A link to jenkins: http://vm-jenkins-test-12/view/CR30926-master-vro/view/COMPARE/. [^] |
(0086655) git (administrator) 2019-09-02 18:01 |
Branch CR30926 has been deleted by apn. SHA-1: 53b8b79c56bfc7b6e57ffcbb891812b5b2d02841 |
![]() |
|||
occt: master 990d032c
Timestamp: 2019-08-29 13:20:50 Author: vro Committer: apn [ Details ] [ Diff ] |
0030926: Data Exchange - Change of the number of GDT points of a View may lead to a crash | ||
mod - src/XCAFDoc/XCAFDoc_View.cxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2019-08-29 11:35 | vro | New Issue | |
2019-08-29 11:35 | vro | Assigned To | => vro |
2019-08-29 15:43 | vro | Note Added: 0086525 | |
2019-08-29 15:43 | vro | Assigned To | vro => mpv |
2019-08-29 15:43 | vro | Status | new => resolved |
2019-08-29 16:02 | mpv | Note Added: 0086528 | |
2019-08-29 16:02 | mpv | Assigned To | mpv => vro |
2019-08-29 16:02 | mpv | Status | resolved => assigned |
2019-08-29 16:23 | git | Note Added: 0086532 | |
2019-08-29 16:30 | vro | Note Added: 0086534 | |
2019-08-29 16:30 | vro | Assigned To | vro => mpv |
2019-08-29 16:30 | vro | Status | assigned => resolved |
2019-08-29 17:28 | mpv | Assigned To | mpv => bugmaster |
2019-08-29 17:28 | mpv | Status | resolved => reviewed |
2019-08-29 18:48 | apn | Test case number | => Not needed |
2019-08-29 18:48 | apn | Note Added: 0086538 | |
2019-08-29 18:48 | apn | Status | reviewed => tested |
2019-08-30 07:56 | vro | Note Added: 0086545 | |
2019-08-31 17:53 | apn | Changeset attached | => occt master 990d032c |
2019-08-31 17:53 | apn | Assigned To | bugmaster => apn |
2019-08-31 17:53 | apn | Status | tested => verified |
2019-08-31 17:53 | apn | Resolution | open => fixed |
2019-09-02 18:01 | git | Note Added: 0086655 |
Copyright © 2000 - 2021 MantisBT Team |