0030926: Data Exchange - Change of the number of GDT points of a View may lead to a crash